intTests/test_parse_errors/parser017.log.good
Loading file "parser017.saw"
parser017.saw:2:18-2:19: Error: Syntax error: missing ')'
FAILED
