intTests/test_parse_errors/parser017.saw
// Tuple type annotations go on the tuple elements, not outside
let f ((a, b, _) : Int, Int, Int) () = (a, b);
